--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                             <img src="./img/logo.png" alt="header-logo">
                             <!-- Header Hamburger -->
                             <i class="fa-solid fa-bars fa-xl"></i>
+                            <!-- Header Menu -->
+                            <nav>
+                                <a href="#second-section" class="txt-white">Planning</a>
+                                <a href="#testimonials-section" class="txt-white">Testimonials</a>
+                                <a href="#benefits-section" class="txt-white">Features</a>
+                                <a href="#about-us-section" class="txt-white">About Us</a>
+                                <a href="#get-started-section" class="txt-black bgcolor-white">Get Started</a>
+                            </nav>
                         </div>
                     </div>
                 </div>
@@ -208,7 +216,10 @@
             <section id="benefits-section" class="bgcolor-violet">
                 <div class="container">
                     <div class="row">
-                        <h2 class="txt-white txt-center">Benefits of working with us</h2>
+                        <!-- Benefits Title -->
+                        <div class="col">
+                            <h2 class="txt-white txt-center">Benefits of working with us</h2>
+                        </div>
                         <!-- Hight Quality -->
                         <div class="col bgcolor-white">
                             <div class="benefits-content">
